--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -18,6 +18,6 @@
     <%= link_to  list_path(list)  do%>
       <%= list.name %>  
     <%end%>
-    <%= link_to  "delete", list, method: :delete, style: "display: inline;" %>
+    <%= link_to  "delete", list, method: :delete %>
   </p>
 <% end%>
