--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,17 +1,17 @@
-<%= form_for [@list, @todo], local: true do |form|%>
+<%= form_for [@list, @todo], url: list_todos_path(@list, @todo) do |form|%>
   <% if @todo.errors.any?%>
-  <ul>
-    <% @todo.errors.full_messages.each do |message| %>
-      <li>
-        <%= message%>
-      </li>
-    <%end%>
-  </ul>
+    <ul>
+      <% @todo.errors.full_messages.each do |message| %>
+        <li>
+          <%= message%>
+        </li>
+      <%end%>
+    </ul>
   <% end%>
   <%= form.text_field :description%>
   <input type="submit" value="Add todo">
 <% end %>
-<% @todos.each do |todo| %>
+<% @list.todos.each do |todo| %>
   <p>
     <%= todo.description %>
     <button data-reflex="click->ExampleReflex#update" data-id=<%= todo.id%>><%= todo.status == 0? "complete" : "incomplete" %></button>
